fix: remove spacing

--- a/apps/platform/src/components/inputs/input-number/InputNumber.module.scss
+++ b/apps/platform/src/components/inputs/input-number/InputNumber.module.scss
@@ -28,7 +28,7 @@
 .top_row {
   display: flex;
   align-items: center;
-  gap: $spacing-2;
+  gap: 8px;
   width: 100%;
 }
 
@@ -75,13 +75,13 @@
 .right_elements {
   display: flex;
   align-items: flex-start;
-  margin-left: $spacing-2;
+  margin-left: 8px;
 }
 
 .right_column {
   display: flex;
   flex-direction: column;
-  gap: $spacing-2;
+  gap: 8px;
 
   & > *:first-child {
     margin-top: 0;
@@ -91,8 +91,8 @@
 .token_selector {
   display: flex;
   align-items: center;
-  gap: $spacing-2;
-  padding: $spacing-2 $spacing-3;
+  gap: 8px;
+  padding: 8px 12px;
   border-radius: 16px;
   background-color: $color-neutral-800;
   cursor: pointer;
@@ -112,8 +112,8 @@
 .token_option {
   display: flex;
   align-items: center;
-  gap: $spacing-2;
-  padding: $spacing-2 $spacing-3;
+  gap: 8px;
+  padding: 8px 12px;
   border-radius: 12px;
   background: transparent;
   border: none;
